CORE-534 Add webhook sample
