# public/swagger.json
@@ -479,6 +479,28 @@
 					}
 				]
 			}
+		},
+		"/webhook": {
+			"get": {
+				"operationId": "HandleWebhook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Webhook"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
